Criado através do Colab

--- a/Modelo_Printabilidade.ipynb
+++ b/Modelo_Printabilidade.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP39F9jq1eThynsac4r4qi5",
+      "authorship_tag": "ABX9TyOYjF6ajmCIVKqY/GFiTuIu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
         "train_ds = make_ds(train_paths, train_labels, shuffle=True)\n",
         "val_ds   = make_ds(val_paths,   val_labels,   shuffle=False)\n",
         "\n",
-        "# 5) Mesma arquitetura leve de antes\n",
+        "# 5) Arquitetura leve\n",
         "model = tf.keras.Sequential([\n",
         "    tf.keras.layers.Input((128, 128, 3)),\n",
         "    tf.keras.layers.Conv2D(32, 3, activation='relu', padding='same'),\n",
@@ -89,7 +89,7 @@
         "\n",
         "model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
         "\n",
-        "# 6) Scheduler suave, como você já ajustou\n",
+        "# 6) Scheduler suave\n",
         "reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(\n",
         "    monitor='val_loss',\n",
         "    factor=0.8,\n",
@@ -310,7 +310,7 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Plot das curvas de perda (loss) e MAE\n",
+        "# Plot das curvas de perda (Loss) e MAE\n",
         "plt.figure(figsize=(12, 5))\n",
         "\n",
         "# Loss\n",
