Criado através do Colab

--- a/Modelo_Printabilidade.ipynb
+++ b/Modelo_Printabilidade.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYjF6ajmCIVKqY/GFiTuIu",
+      "authorship_tag": "ABX9TyOPLYDokwwHrsdUiPhlrdzM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cascon81/biomaterial-analyser/blob/main/Modelo_Printabilidade.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Criação da Rede Neural e Treinamento"
+      ],
+      "metadata": {
+        "id": "rBwLOVaT-ulb"
+      }
     },
     {
       "cell_type": "code",
@@ -304,6 +313,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Avaliação do Modelo"
+      ],
+      "metadata": {
+        "id": "ykmx3CKI-5j_"
+      }
     },
     {
       "cell_type": "code",
